$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-03-08 [C] Fixed mis-alignement of album description in index view (thread ID 63990) {GauGau}
2010-03-08 [B] Replacing hard-coded words in curve theme with translated variables (thread ID 63985) {GauGau}
2010-03-06 [C] Updated Finnish language file (user contribution) {eenemeenemuu}
2010-03-05 [C] Added minimum height attribute to curve theme to catter for gradient background needing more space{GauGau}
2010-03-05 [M] Counted version number up as a preparation for the upcoming release {GauGau}
2010-03-04 [B] Fixed browse-by-date link in curve theme and missing extension for spacer (thread ID 63947) {GauGau}
2010-03-04 [B] Fixed search issue when private albums are present (thread 63940) {eenemeenemuu}
2010-03-04 [B] Fixed display of empty meta albums (thread ID 63939) {eenemeenemuu}
2010-03-03 [C] Set theme "curve" as default theme {GauGau}
2010-03-03 [M] Removed outdated core themes {GauGau}
2010-03-01 [D] Added language manager section to docs {GauGau}
2010-03-01 [A] Added Greek language file (user contribution) {eenemeenemuu}
2010-02-26 [B] Slideshow from lastcom of an album doesn't start at correct file (thread ID 63585) {timoswelt}
2010-02-25 [A] Populate thumbnail pages dropdown list using JavaScript (thread ID 63844) {eenemeenemuu}
2010-02-23 [A] Added plugin hook 'theme_thumbnails_album_types' {eenemeenemuu}
2010-02-22 [C] Increased height for logo section of coppermine theme {GauGau}
2010-02-19 [A] Added plugin hooks for thumbnail table manipulation {GauGau}
2010-02-18 [B] Added missing token checks to forms {GauGau}